--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,64 +1,66 @@
-.footer {
-    background-color: #005566;
-    color: black; 
-    padding: 20px 20px;
-    position: relative; 
-    width: 100%;
-    bottom: 0;
-  }
-  
-  .footer-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  
-  .footer-content .logo {
-    color: black;
-  }
-  
-  .footer-content .nav {
-    display: flex;
-    gap: 20px;
-  }
-  
-  .footer-content .nav a {
-    color: black;
-    text-decoration: none;
-  }
-  
-  .footer-content .social-media {
-    display: flex;
-    gap: 10px;
-  }
-  
-  .footer-content .social-media a {
-    color: black;
-    text-decoration: none;
-    font-size: 1.2em;
-  }
-  
-  .footer-legal {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .footer-legal a {
-    color: black;
-    text-decoration: none;
-    margin: 0 10px;
-  }
-  
-  .footer-legal p {
-    margin-top: 10px;
-    color: black;
-  }
+.full-footer {
+  position: relative;
+  width: 100%;
+  bottom: 0;
+}
 
-  .copyright {
-    background-color: #333;
-    padding: 10px 0;
-    color: #bbb;
-    font-size: 14px;
-    text-align: center;
-  }
+.footer {
+  background-color: #005566;
+  color: black;
+  padding: 20px 20px;
+
+}
+
+.logo-social-media {
+  display: flex;
+  width: 80%;
+  margin: 3% 10%;
+  justify-content: space-between;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.footer-content .logo {
+  color: black;
+}
+
+.footer-content .nav {
+  display: flex;
+  gap: 20px;
+}
+
+.footer-content .nav a {
+  color: #FFF;
+  text-decoration: none;
+}
+
+.footer-legal {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.footer-legal a {
+  color: #FFF;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+.footer-legal p {
+  margin-top: 10px;
+  color: #FFF;
+}
+
+.copyright {
+  background-color: #333;
+  padding: 10px 0;
+  color: #bbb;
+  font-size: 14px;
+  text-align: center;
+}
