--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -78,7 +78,18 @@
     text-align: center;
 }
 
-img.logo {
+img.logoWhite {
     width: 100px;
     height: 50px;
+	border-radius: 5%;
+    opacity: 0.7;
+}
+
+.logoWhite {
+    width: 100px;
+    transition: transform 0.3s ease;
+}
+
+.logoWhite:hover {
+    transform: scale(1.1);
 }
