--- a/src/components/SocialMedia.css
+++ b/src/components/SocialMedia.css
@@ -8,7 +8,9 @@
     background-color: #333;
     border-radius: 50%;
     padding: 10px;
-    font-size: 1em;
+    font-size: 15px;
+    width: 34px;
+    height: 40px;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
