--- a/src/pages/ContactForm.css
+++ b/src/pages/ContactForm.css
@@ -1,7 +1,7 @@
 .contact-form-animaciones {
     width: 100%;
     max-width: 600px;
-    margin: 0 auto;
+    margin: 5% auto;
     padding: 1rem;
     border-radius: 15px; /* Bordes redondeados */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
