--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 5% auto;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
