--- a/src/pages/QuotePage.css
+++ b/src/pages/QuotePage.css
@@ -15,7 +15,6 @@
 .service-image-placeholder {
   width: 100%;
   height: 200px;
-  background: #ccc;
   margin-bottom: 1rem;
   display: flex;
   justify-content: center;
@@ -25,6 +24,7 @@
 .service-image-placeholder img {
   max-width: 100%;
   max-height: 100%;
+  border-radius: 5px;
 }
 
 .service-details h2,
