changes background color

--- a/src/components/GalleryAll.css
+++ b/src/components/GalleryAll.css
@@ -1,7 +1,7 @@
 /* GalleryAll.css */
 .gallery {
     padding: 40px 20px; /* Increased padding for a more spacious feel */
-    background-color: #f9f9f9;
+    background-color: #fff;
     text-align: center;
 }
 
