--- a/src/components/EventCalendar.css
+++ b/src/components/EventCalendar.css
@@ -206,4 +206,14 @@ button.react-calendar__navigation__arrow.react-calendar__navigation__next-button
 button.react-calendar__navigation__arrow.react-calendar__navigation__next2-button {
     background: lightslategray;
 }
+.validation-error {
+    color: #d9534f; /* Color rojo para el texto */
+    background-color: #f2dede; /* Fondo ligeramente rosado para el error */
+    border: 1px solid #d9534f; /* Borde rojo */
+    border-radius: 4px; /* Bordes redondeados */
+    padding: 10px; /* Espaciado interno */
+    margin-top: 10px; /* Espaciado superior */
+    font-weight: bold; /* Fuente en negrita */
+    text-align: center; /* Alineación centrada */
+}
 
