--- a/src/components/Reviews.css
+++ b/src/components/Reviews.css
@@ -69,12 +69,10 @@
     background-color: #c0392b;
 }
 
-.modal {
+.modal-review {
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
     position: fixed;
-    z-index: 1;
+    z-index: 1000;
     left: 0;
     top: 0;
     width: 100%;
