--- a/src/components/PaymentForm.css
+++ b/src/components/PaymentForm.css
@@ -10,14 +10,13 @@
     height: 400px;
 }
 
-
 .validation-error {
-    color: #d9534f; /* Color rojo para el texto */
-    background-color: #f2dede; /* Fondo ligeramente rosado para el error */
-    border: 1px solid #d9534f; /* Borde rojo */
-    border-radius: 4px; /* Bordes redondeados */
-    padding: 10px; /* Espaciado interno */
-    margin-top: 10px; /* Espaciado superior */
-    font-weight: bold; /* Fuente en negrita */
-    text-align: center; /* Alineación centrada */
+    color: #d9534f;
+    background-color: #f2dede;
+    border: 1px solid #d9534f;
+    border-radius: 4px;
+    padding: 10px;
+    margin-top: 10px;
+    font-weight: bold;
+    text-align: center;
 }
