--- a/src/components/Language.css
+++ b/src/components/Language.css
@@ -50,6 +50,12 @@
     box-shadow: 0 0 10px rgba(0, 123, 255, 0.5); /* Sombra para resaltar el idioma activo */
 }
 
+.language-selector img:not(.active):hover {
+    transform: scale(1.1);
+    border-color: #007BFF; /* Color del borde para el hover */
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5); /* Sombra para resaltar el hover */
+}
+
 /* Media queries para responsividad */
 @media (max-width: 768px) {
     .language-selector {
