--- a/src/components/Language.css
+++ b/src/components/Language.css
@@ -46,37 +46,43 @@
 }
 
 .language-selector img.active {
-    border-color: #007BFF; /* Color del borde para el idioma activo */
-    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5); /* Sombra para resaltar el idioma activo */
+    border-color: #007BFF;
+    /* Color del borde para el idioma activo */
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+    /* Sombra para resaltar el idioma activo */
 }
 
 .language-selector img:not(.active):hover {
     transform: scale(1.1);
-    border-color: #007BFF; /* Color del borde para el hover */
-    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5); /* Sombra para resaltar el hover */
+    border-color: #007BFF;
+    /* Color del borde para el hover */
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+    /* Sombra para resaltar el hover */
 }
 
 /* Media queries para responsividad */
 @media (max-width: 768px) {
     .language-selector {
-        top: 10px;
+        top: 30px;
         right: 10px;
+        z-index: 1000;
     }
 
     .language-selector img {
-        width: 30px;
-        height: 30px;
+        width: 35px;
+        height: 35px;
     }
 }
 
 @media (max-width: 480px) {
     .language-selector {
-        top: 20px;
-        right: 5px;
+        top: 30px;
+        right: 10px;
+        z-index: 1000;
     }
 
     .language-selector img {
-        width: 30px;
-        height: 30px;
+        width: 35px;
+        height: 35px;
     }
 }
