--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -14,9 +14,9 @@ a {
   margin: 15px 0;
 }
 
-button {
+button.inicioSeccion{
   border-radius: 20px;
-  border: 1px solid #ff4b2b;
+  border: 1px solid white;
   background-color: #ff4b2b;
   color: #ffffff;
   font-size: 12px;
@@ -27,17 +27,34 @@ button {
   transition: transform 80ms ease-in;
 }
 
-button:active {
+button.inicioSeccion:active {
   transform: scale(0.95);
 }
 
-button:focus {
+button.inicioSeccion:focus {
   outline: none;
 }
 
 button.ghost {
   background-color: transparent;
   border-color: #ffffff;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: #ff4b2b;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+}
+button.ghost:active {
+  transform: scale(0.95);
+}
+
+button.ghost:focus {
+  outline: none;
 }
 
 form {
