--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -44,6 +44,13 @@
     border: 1px solid #ccc;
 }
 
+.logo {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
 /* Media queries para responsividad */
 @media (max-width: 820px) {
     .header {
